[gd_scene load_steps=15 format=2]

[ext_resource path="res://addons/angelica/CommandLine/DigoOsFloat.gd" type="Script" id=1]
[ext_resource path="res://addons/angelica/fonts/open_sans_yellow.tres" type="DynamicFont" id=2]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.423529, 0.423529, 0.423529, 0.211765 )
border_color = Color( 0.6, 0.372549, 0.6, 0.552941 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 4
expand_margin_left = 2.0
expand_margin_right = 2.0

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 18.0
content_margin_right = 4.0
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color( 0.184314, 0.184314, 0.184314, 0.556863 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.87451, 0.690196, 0, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 4.0
expand_margin_right = 4.0

[sub_resource type="DynamicFontData" id=4]
font_path = "res://addons/angelica/fonts/OpenSans-Semibold.ttf"

[sub_resource type="DynamicFont" id=5]
size = 14
font_data = SubResource( 4 )

[sub_resource type="Theme" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFontData" id=8]
font_path = "res://addons/angelica/fonts/OpenSans-Semibold.ttf"

[sub_resource type="DynamicFont" id=9]
font_data = SubResource( 8 )

[sub_resource type="Animation" id=10]
resource_name = "HideLineEdit"
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("LineEdit:margin_right")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0333333, 0.0833333, 0.116667, 0.15, 0.166667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 457.0, 400.0, 300.0, 250, 150.0, 62.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Control:margin_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.166667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 32.0, 32.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LineEdit2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.0166667 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LineEdit:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.166667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../DiegOSLogo:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.166667, 0.216667 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.5, 0.5 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../DiegOSLogo:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.166667, 0.216667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.592157 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "ShowLineEdit"
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("LineEdit:margin_right")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.05, 0.0666667, 0.0833333, 0.1, 0.116667, 0.133333, 0.15, 0.166667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 62.0, 80.0, 90, 130, 250, 300.0, 400.0, 457.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LineEdit:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.166667 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LineEdit:focus_mode")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.166667 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LineEdit2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.15, 0.166667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../DiegOSLogo:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.0333333 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../DiegOSLogo:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.0333333 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.592157 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="StyleBoxEmpty" id=12]
content_margin_right = 0.0

[node name="DiegoOsFloat" type="Node2D"]
script = ExtResource( 1 )

[node name="Command2" type="Node2D" parent="."]
position = Vector2( 16.7545, 2.91115 )

[node name="LineEdit" type="LineEdit" parent="Command2"]
visible = false
anchor_bottom = 10.0
margin_top = 1.0
margin_right = 457.0
margin_bottom = 25.0
theme = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 5 )
clear_button_enabled = true
placeholder_text = " "
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Linkmini" type="RichTextLabel" parent="Command2/LineEdit"]
margin_left = 491.0
margin_right = 514.0
margin_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
bbcode_text = "[img]res://addons/angelica/images/16/1f4ad.png[/img]"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "[/img]res://addons/angelica/images/16/1f4ad.png[/img]"
}

[node name="ask" type="RichTextLabel" parent="Command2/LineEdit"]
margin_left = 467.0
margin_top = 1.0
margin_right = 495.0
margin_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
focus_next = NodePath("../../Print")
focus_previous = NodePath("..")
theme = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[img]res://addons/angelica/images/16/1f4ac.png[/img]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="RichTextLabel" parent="Command2/LineEdit"]
visible = false
margin_left = 2.1795
margin_top = 2.57443
margin_right = 180.179
margin_bottom = 25.5744
input_pass_on_modal_close_click = false
custom_styles/normal = SubResource( 7 )
custom_fonts/normal_font = SubResource( 9 )
bbcode_enabled = true
text = "afsafsddssdvvdsvdv"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit2" type="LineEdit" parent="Command2"]
anchor_bottom = 10.0
margin_top = 1.0
margin_right = 457.0
margin_bottom = 25.0
theme = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 5 )
clear_button_enabled = true
placeholder_text = " "
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Linkmini" type="RichTextLabel" parent="Command2/LineEdit2"]
margin_left = 491.0
margin_right = 514.0
margin_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
bbcode_text = "[img]res://addons/angelica/images/16/1f4ad.png[/img]"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "[/img]res://addons/angelica/images/16/1f4ad.png[/img]"
}

[node name="ask" type="RichTextLabel" parent="Command2/LineEdit2"]
margin_left = 467.0
margin_top = 1.0
margin_right = 495.0
margin_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
focus_next = NodePath("../../Print")
focus_previous = NodePath("..")
theme = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[img]res://addons/angelica/images/16/1f4ac.png[/img]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="RichTextLabel" parent="Command2/LineEdit2"]
visible = false
margin_left = 2.1795
margin_top = 2.57443
margin_right = 180.179
margin_bottom = 25.5744
input_pass_on_modal_close_click = false
custom_styles/normal = SubResource( 7 )
custom_fonts/normal_font = SubResource( 9 )
bbcode_enabled = true
text = "afsafsddssdvvdsvdv"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Command2"]
anims/HideLineEdit = SubResource( 10 )
anims/ShowLineEdit = SubResource( 11 )

[node name="DiegOSLogo" type="Node2D" parent="."]
position = Vector2( 16, 16 )

[node name="RichTextLabel" type="RichTextLabel" parent="DiegOSLogo"]
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
custom_styles/normal = SubResource( 12 )
bbcode_enabled = true
bbcode_text = "[img]res://addons/angelica/images/32/000dfb.png[/img]"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
pause_mode = 1
self_modulate = Color( 1, 1, 1, 0.0117647 )
margin_right = 32.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="Command2/LineEdit" to="." method="_on_LineEdit_gui_input"]
[connection signal="focus_exited" from="Command2/LineEdit2" to="." method="_on_LineEdit2_focus_exited"]
[connection signal="mouse_exited" from="Command2/LineEdit2" to="." method="_on_LineEdit2_mouse_exited"]
[connection signal="text_changed" from="Command2/LineEdit2" to="." method="_on_LineEdit2_text_changed"]
[connection signal="text_entered" from="Command2/LineEdit2" to="." method="_on_LineEdit2_text_entered"]
[connection signal="gui_input" from="Control" to="." method="_on_Control_gui_input"]
[connection signal="mouse_entered" from="Control" to="." method="_on_Control_mouse_entered"]
